<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="quadrant.gametime.com.spendabot.LoginPage.Profile.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backColor">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="16dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/profileImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_add_circle_white_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/firstNameInput"
                    android:layout_marginTop="32dp"
                    android:hint="@string/first_name"
                    android:textColorHint="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/firstName"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/lastNameInput"
                    android:layout_marginTop="32dp"
                    android:hint="@string/last_name"
                    android:textColorHint="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/lastName"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/phoneNumberInput"
                    android:layout_marginTop="32dp"
                    android:hint="@string/phone_number"
                    android:textColorHint="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phoneNumber"
                        android:textColor="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:maxLength="10"
                        android:imeOptions="actionNext"/>

                </android.support.design.widget.TextInputLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phoneVerifyInput"
                        android:layout_marginTop="32dp"
                        android:hint="@string/verification_code"
                        android:textColorHint="@android:color/black"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/phoneVerify"
                            android:textColor="@android:color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="6"
                            android:imeOptions="actionDone" />

                    </android.support.design.widget.TextInputLayout>

                    <TextView
                        style="@style/TextAppearance.AppCompat.Medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:paddingBottom="16dp"
                        android:text="@string/verify"
                        android:textColor="@color/verifyColor" />

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/registerBtn"
            android:text="@string/register"
            style="@style/TextAppearance.AppCompat.Title"
            android:textColor="@android:color/black"
            android:layout_alignParentBottom="true"
            android:background="@color/register_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"/>

    </FrameLayout>

</FrameLayout>
