<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="quadrant.gametime.com.spendabot.LoginPage.Home.HomeFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/backColor">

        <TextView
            android:id="@+id/dayOfMonth"
            android:layout_alignParentTop="true"
            android:background="@color/colorTertiary"
            android:padding="24dp"
            style="@style/TextAppearance.AppCompat.Title"
            android:text="@string/day_of_mnt"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.CardView
            android:id="@+id/expensesCard"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:layout_below="@+id/dayOfMonth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/expText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/expenses" />

                <TableLayout
                    android:id="@+id/table"
                    android:layout_below="@+id/expText"
                    android:layout_marginTop="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/budgetCard"
            android:layout_marginTop="8dp"
            android:layout_below="@+id/expensesCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:background="@android:color/white">

                <TextView
                    android:id="@+id/budgetText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/budgets" />

                <TextView
                    android:id="@+id/monthName"
                    android:layout_toEndOf="@+id/budgetText"
                    android:layout_marginStart="8dp"
                    android:text="Month Name"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <ProgressBar
                    android:id="@+id/expProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:max="100"
                    android:progress="0"
                    android:padding="8dp"
                    android:layout_below="@+id/budgetText"
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/noBudget"
                    android:layout_below="@+id/expProgress"
                    android:layout_marginTop="16dp"
                    style="@style/TextAppearance.AppCompat.Caption"
                    android:visibility="gone"
                    android:text="@string/no_budget_set"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </RelativeLayout>

</FrameLayout>
